# atlas-coder

./: .atlas-config.yaml  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LLM-OVERVIEW.md  MANIFEST.in  README.md  V6_TRANSFORMATION_SUMMARY.md  advanced_self_analysis_report.json  atlas_dspy.py  atlas_dspy_v6.py  init.sh  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh  setup_professional_structure.py  test_buggy_code.py  test_git_cycle.txt  upgrade_dspy3.py  watcher.py  work_log.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
atlas_coder/: __init__.py
atlas_coder/advanced/: __init__.py  meta_learning.py  meta_programming.py  reasoning.py
atlas_coder/cli/: __init__.py  commands.py  main.py  utils.py
atlas_coder/core/: __init__.py  engine.py  modules.py  signatures.py  workflows.py
atlas_coder/dspy/: __init__.py  caching.py  optimization.py  progressive.py
atlas_coder/integrations/: __init__.py  aider.py
atlas_coder/utils/: __init__.py  config.py  exceptions.py  logging.py
docs/: architecture.md  contributing.md  getting-started.md  index.md  usage.md  workflows.md
docs/source/: conf.py
dspy_core/: agentic.py  bootstrap.py  cache.py  claude_code_parity.py  community.py  engine.py  model_strategy.py  modules.py  optimization.py  progressive_execution.py  signatures.py  workflows.py
examples/: advanced_workflows.py  ai_integration.py  basic_usage.py  real_usage_demo.py  self_analysis_demo.py  self_analysis_pure.py  v6_demo.py
examples/fastapi_complete/: atlas_demo.db  debug_test.py  main.py  requirements.txt  test.db  test_main.py
generated_intelligence/: adaptivelearner.py  advancedpatternrecognizer.py  intelligenceorchestrator.py  intelligentoptimizer.py  rapidprocessor.py  semanticanalyzer.py
tests/: __init__.py  conftest.py  test_cli.py  test_engine.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_engine.py
